# SignL

./: .gitignore  IMPLEMENTATION_SUMMARY.md  ISL_ASL_Datasets_Models.md  Old_code.py  PROJECT_STATUS.md  QUICK_START.md  README.md  SUPERADV_IMPLEMENTATION_STATUS.md  VISUAL_GUIDE.md  check_requirements.py  copilot-instructions.md  debug_face_detection.py  dev.sh  env.yml  env2.yml  environment.yml  proj_sign.yml  pyproject.toml  requirements.txt  run_server_direct.sh  setup_project.py  start.ps1  start.sh  start_server.ps1  start_server.sh  superadv.tar  test_face_recognition.py  test_server.html  workspace-395f1a69-95fe-4465-8f52-a8d88b1b91a3.tar  workspace-4d80d3d4-62f5-4102-a1e9-096665ded317 (1).tar  workspace-4d80d3d4-62f5-4102-a1e9-096665ded317 (3).tar  workspace-4d80d3d4-62f5-4102-a1e9-096665ded317.tar
_imports/signsync-omni-v10/: App.tsx  README.md  constants.ts  index.html  metadata.json  package.json  types.ts
_imports/workspace-395f1a69-95fe-4465-8f52-a8d88b1b91a3/: README.md
docs/: API.md  SETUP.md  SIGN_LANGUAGE.md
fase_data/: ds_model_facenet_detector_opencv_aligned_normalization_base_expand_0.pkl  ds_model_vggface_detector_opencv_aligned_normalization_base_expand_0.pkl
majorSignL/: config.py  train_model.py
majorSignL/api/: main.py
majorSignL/frontend/: index.html
majorSignL/models/: emotion_processor.py  face_processor.py  gender_processor.py  mediapipe_face_recognizer.py  pytorch_face_recognizer.py
majorSignL/utils/: mediapipe_processor.py  one_euro_filter.py
signl/: config.py
signl/api/: __init__.py  main.py  websocket_handler.py
signl/frontend/: app.js  index.html  index_old_backup.html  test.html
signl/models/: __init__.py  advanced_emotion_processor.py  advanced_processors.py  download_sign_model.py  emotion_detector.py  face_processor.py  gender_processor.py  (+4 more)
utils/: one_euro_filter.py
(+55 files in other folders)
